--- a/app/index.html
+++ b/app/index.html
@@ -99,12 +99,15 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+
         <!--  Services   !-->
        <script src="scripts/services/intervals.js"></script>
 
         <!-- Controllers  !-->
        <script src="scripts/controllers/main.js"></script>
        <script src="scripts/controllers/about.js"></script>
+       <script src="scripts/controllers/settime.js"></script>
+
 
         <!-- endbuild -->
 </body>
